--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "db:seed": "node seeders/DatabaseSeeder.js"
+    "db:seed": "node seeders/DatabaseSeeder.js",
+    "debug": "ndb index.js"
   },
   "author": "Karel",
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.721.0",
     "bcrypt": "^5.1.1",
+    "cron": "^3.5.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.0",
@@ -24,12 +26,17 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "mysql": "^2.18.1",
+    "ndb": "^1.1.5",
+    "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "pug": "^3.0.3",
+    "redis": "^4.7.0",
     "user-agent": "^1.0.4",
     "validator": "^13.12.0"
   },
